CHANGES IN VERSION 2.19.5
-------------------------
 o header for the pwiz backend returns NA instead of 0 for not defined or
   missing information <2019-09-24 Tue>.

CHANGES IN VERSION 2.19.4
-------------------------
 o Add header columns scanWindowLowerLimit and scanWindowUpperLimit

CHANGES IN VERSION 2.19.3
-------------------------
 o use ProtGenerics::tolerance generic <2019-08-16 Fri>

CHANGES IN VERSION 2.19.2
-------------------------
 o Fix issue 190, compiles on clang-8.0

CHANGES IN VERSION 2.19.1
-------------------------
 o Remove analyzer generics, now in ProtGenerics <2019-05-13 Mon>

CHANGES IN VERSION 2.17.4
-------------------------
 o Update documentation, pointing to MSnbase rather than directly use
   low-level classes. <2019-04-17 Wed>

CHANGES IN VERSION 2.17.3
-------------------------
 o Extract isolation window from mzML files (issue #193): data.frame returned
   by header gains columns "isolationWindowTargetMZ",
   "isolationWindowLowerOffset", "isolationWindowUpperOffset".

CHANGES IN VERSION 2.17.2
-------------------------
 o Fix bug #185: Error in R_nc4_open: Too many open files

CHANGES IN VERSION 2.15.5
-------------------------
 o Fix bug #181

CHANGES IN VERSION 2.15.4
-------------------------
 o Use new dependency ncdf4 for netCDF reading,
   removes a lot of build hassles with old libnetcdf-dev linking.
 o specParams returns a numeric scan.number.s.

CHANGES IN VERSION 2.15.3
-------------------------
 o Adds MS-GF+ information such as Scan Time and a more reliable Scan
   Number, contributed by FarmGeek4Life (see PR #174).

CHANGES IN VERSION 2.15.2
-------------------------
 o Add header column ionMobilityDriftTime to report the corresponding CV
   parameter (issue https://github.com/sneumann/mzR/issues/44).
 o Ensure ion injection time is always reported in milliseconds.
 o Replace BiocInstaller::biocLite with BiocManager::install (by Bioc
   core)

CHANGES IN VERSION 2.15.1
-------------------------